--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             var app = angular.module('myApp', []); 
     app.controller("myController", function($scope){
         $scope.click = function(){
-        $scope.name = "Hello bạn Trang";
+        $scope.name = "Hello đại ca";
     }
     });
         </script>
